<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".gameWinner">

    <ImageView
        android:id="@+id/iv_winLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/win_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248"
        app:srcCompat="@drawable/win" />

    <Button
        android:id="@+id/hangAnother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playAgain"
        android:text="@string/hang_another_pesant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_winLogo"
        app:layout_constraintVertical_bias="0.486" />

    <Button
        android:id="@+id/backToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backToStart"
        android:text="@string/back_to_start"
        app:layout_constraintBottom_toTopOf="@+id/hangAnother"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_winLogo"
        app:layout_constraintVertical_bias="0.744" />
</androidx.constraintlayout.widget.ConstraintLayout>