<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/playGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="424dp"
        android:onClick="playGame"
        android:soundEffectsEnabled="false"
        android:text="@string/play_game_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="aboutMe"
        android:text="@string/button_about_me_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGame"
        app:layout_constraintVertical_bias="0.18" />


    <ImageView
        android:id="@+id/iv_hangHimLogo"
        android:layout_width="356dp"
        android:layout_height="156dp"
        android:contentDescription="@string/logotype_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317"
        app:srcCompat="@drawable/hanghim" />

    <Switch
        android:id="@+id/sw_soundSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startMedia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutMe"
        />

</androidx.constraintlayout.widget.ConstraintLayout>